--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             <div id="text">
                 <div id="code">
                     <span class="say"><img src="ruchika.jpg" alt="Ruchika" width="240" height="420"></span><br>
-                    <span class="say">Hii, Ruchika</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May God bless you 🍀</span><br>
-                    <span class="say">And give you many happiness 💕</span><br>
-                    <span class="say">Just saying... you're pretty awesome ❤️</span><br>
-                    <span class="say">I Hope you have a great day today ❤️</span><br>
+                    <span class="say">Happy Birthday, Ruchika 🎈💖</span><br>
+                    <span class="say">May God wrap you in endless blessings, happiness and love-today and always 🍀💕</span><br>
+                    <span class="say">You’re incredibly special. Your warmth, joy, and light make you truly unique ❤️ </span><br>
+                    <span class="say">You’re not just amazing—you’re one of a kind 🍀</span><br>
+                    <span class="say">I hope today is filled with smiles, laughter, and everything your beautiful heart deserves 💖</span><br>
+                    <span class="say">Have the most wonderful day 💕</span><br>
+                    
                 </div>
             </div>
             <div id="clock-box">
