--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say"><img src="ruchika.jpg" alt="Ruchika" width="240" height="420"></span><br>
+                    <span class="say"><img src="sarre2.jpg" alt="Ruchika" ></span><br>
                     <span class="say">Happy Birthday, Ruchika 🎈💖</span><br>
-                    <span class="say">May God wrap you in endless blessings, happiness and love-today and always 🍀💕</span><br>
+                    <span class="say">May God wrap you in endless blessings, happiness and love-today and always 💕</span><br>
                     <span class="say">You’re incredibly special. Your warmth, joy, and light make you truly unique ❤️ </span><br>
                     <span class="say">You’re not just amazing—you’re one of a kind 🍀</span><br>
                     <span class="say">I hope today is filled with smiles, laughter, and everything your beautiful heart deserves 💖</span><br>
