--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div id="clock-box">
                 <span id="clock">577 days 0 hours 0 minutes 0 seconds</span> <!-- Change to "6940 days..." if needed -->
             </div>
-            <canvas id="canvas" width="1100" height="680"></canvas>
-              <div id="mobile-instruction">
+            <canvas id="canvas" ></canvas>
+              <div id="mobile-instruction" class="blink">
                 Tap screen for sound
             </div>
         </div>
@@ -159,22 +159,52 @@
         }));
 
         var moveAnimate = eval(Jscex.compile("async", function () {
-            tree.snapshot("p1", 240, 0, 610, 680);
-            while (tree.move("p1", 500, 0)) {
+            tree.snapshot("p1", 0, 0, width, height);
+
+            while (tree.move("p1", 300, 0)) {
                 foot.draw();
                 $await(Jscex.Async.sleep(10));
             }
-            foot.draw();
-            tree.snapshot("p2", 500, 0, 610, 680);
 
-            canvas.parent().css("background", "url(" + tree.toDataURL('image/png') + ")");
+            foot.draw();
+            tree.snapshot("p2", 0, 0, width, height);
+
+            canvas.parent().css(
+                "background",
+                "url(" + tree.toDataURL('image/png') + ")"
+            );
             canvas.css("background", "#000");
             $await(Jscex.Async.sleep(300));
             canvas.css("background", "none");
         }));
 
+
+        $.fn.typewriter = function (speed = 25) {
+            this.each(function () {
+                var $ele = $(this),
+                    str = $ele.html(),
+                    progress = 0;
+
+                $ele.html("");
+                var timer = setInterval(function () {
+                    var current = str.substr(progress, 1);
+                    if (current == "<") {
+                        progress = str.indexOf(">", progress) + 1;
+                    } else {
+                        progress++;
+                    }
+                    $ele.html(str.substring(0, progress));
+                    if (progress >= str.length) {
+                        clearInterval(timer);
+                    }
+                }, speed);
+            });
+            return this;
+        };
+
+
         var textAnimate = eval(Jscex.compile("async", function () {
-            $("#code").show().typewriter();
+            $("#code").show().typewriter(45);
         }));
 	    
         var runAsync = eval(Jscex.compile("async", function () {
@@ -188,6 +218,11 @@
         runAsync().start();
         
     } )();
+
+        document.addEventListener("click", function () {
+            var el = document.getElementById("mobile-instruction");
+            if (el) el.remove();  // completely removes the div
+        }, { once: true });
     </script>
 </body>
 </html>
